--- a/windows/Makefile
+++ b/windows/Makefile
@@ -1,2 +1,2 @@
 all:
-	go build -v -buildmode=c-archive --tags noide -o build/libpankti.a windows.go
+	go build -v -buildmode=c-shared --tags noide -o build/libpankti.a windows.go
